update year, add image to front page

--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
 		</section>
 		<section class="pageFr" id="fr/index">
 			<p>Une artiste de Montréal dont le style mélange la nature, la technologie et l'antiquité de façon résonnante.</p>
-			<noscript><p>Votre navigateur web ne semble pas aimer le javascript.<br />Si la redirection vers la version du site sans javascript a échoué, <a href="/nojs">veuillez poursuivre ici</a>.</p></noscript>
+			<p class="latest"><img src="art/paint/16/small.jpg" class="latest"></p>
 			<h4 class="lang"><a href="#">english version</a></h4>
 		</section>
 		<section id="index">
 			<p>A Montréal based artist whose style is a resonating mix of nature, technology and antiquity.</p>
-			<noscript><p>Your browser doesn't seem to like javascript.<br />If redirecting to a javascript-free version of the site failed, <a href="/nojs">please continue here</a>.</p></noscript>
+			<p class="latest"><img src="art/paint/16/small.jpg" class="latest"></p>
 			<h4 class="lang"><a href="#fr/index">version française</a></h4>
 		</section>
 		<div id="menuFix"><div id="menu">
@@ -626,6 +626,6 @@
   </g>
 </svg>
 		</div>
-		<div id="copyright">© 2018 innah.art; <span class="linkEn">all rights reserved.</span><span class="linkFr">tous droits réservés.</span></div>
+		<div id="copyright">© 2019 innah.art; <span class="linkEn">all rights reserved.</span><span class="linkFr">tous droits réservés.</span></div>
 	</body>
 </html>
